src/components/orderDetails/orderDetails.scss
@import '../../index.scss';

.checkout {
  position: relative;
  height: 100%;
  width: 100%;
  float: right;

  .credit-card {
    width: 200px;
    height: 50%;
    min-height: 100px;
    background: linear-gradient(180deg, rgba(255, 255, 255, 0.6), $white_bg);
    backdrop-filter: blur(15px);
    padding: 32px;
    border-radius: 16px;
    box-shadow: 0px 20px 34px 2px rgba(224, 224, 224);
    position: relative;
    z-index: 99;
    left: 50%;
    transform: translate(-50%, 0);
    overflow: hidden;
    max-height: 260px;

    .credit-card__head {
      position: relative;
      display: flex;
      align-items: center;
      justify-content: space-between;
      flex-direction: initial;
      margin-bottom: 70px;

      img {
        height: 25px;
      }

      .chip {
        height: 40px;
      }
    }

    .credit-card__body {
      position: relative;
      color: $text_one;

      span {
        display: block;
      }
      .holder {
        text-transform: capitalize;
        font-size: 12px;

        font-weight: 500;
        margin-bottom: 8px;

        color: #616161;
      }
      .card-digits {
        display: flex;
        margin-bottom: 8px;

        .hidden-digits {
          display: flex;
          align-items: center;
          justify-content: initial;
          flex-direction: initial;
          margin-right: 8px;
          .circle {
            height: 6px;
            width: 6px;
            border-radius: 50%;
            background-color: $dark_bg;
            margin-right: 6px;
          }
        }
        .visible-digits {
          font-size: 12px;
          font-weight: 700;
        }
      }
    }

    .credit-card__footer {
      display: flex;
      align-items: center;
      justify-content: space-between;
      flex-direction: initial;
      position: relative;
      top: 20px;

      .expiry {
        font-size: 12px;
        font-weight: 600;
      }

      .logo {
        height: 28px;
      }
    }
    .card__design {
      width: 700px;
      height: 700px;
      border: 1px solid #ebebeb;
      border-radius: 50%;
      display: flex;
      align-items: center;
      justify-content: center;
      position: absolute;
      top: 0;
      left: -80px;
      z-index: -1;

      .inner {
        display: inline-block;
        width: 570px;
        height: 570px;
        border-radius: inherit;
        border: inherit;
      }
    }
  }

  .checkout-details {
    background-color: $checkout_bg;
    height: 88%;
    min-height: 300px;
    width: 100%;
    max-width: 350px;
    border-radius: 16px;
    position: absolute;
    top: 68px;
    max-height: 500px;
    overflow-y: auto;

    .purchase-data {
      position: relative;
      top: 200px;
      padding: 16px 32px;

      .data {
        display: flex;
        align-items: center;
        justify-content: space-between;
        flex-direction: initial;
        text-transform: capitalize;
        font-size: 13px;
        color: $text_two;
        margin-bottom: 8px;

        .title {
          font-size: 11px;
          font-weight: 500;
        }

        .value {
          display: flex;
          align-items: center;
          justify-content: space-between;
          flex-direction: initial;

          img {
            height: 20px;
          }

          .inner-text {
            color: $text_one;
            font-weight: 600;
            margin-left: 7px;
          }
        }
      }
    }

    .divider {
      position: absolute;
      bottom: 90px;
      width: 100%;
      border: 4px dashed #cbcbcb;
      display: flex;
      align-items: center;

      .left,
      .right {
        position: absolute;
        height: 35px;
        width: 35px;
        background-color: $white_bg;
        border-radius: 50%;
      }

      .left {
        bottom: -15px;
        left: -25px;
      }

      .right {
        bottom: -15px;
        right: -25px;
      }
      &::before {
        content: '';
        display: block;
        position: absolute;
        width: 100%;
        height: 22px;
        background-color: $checkout_bg;
        bottom: -20px;
      }
    }

    .purchase-total {
      position: absolute;
      bottom: 20px;

      width: 100%;
      padding: 0 32px;
      display: flex;
      align-items: center;
      justify-content: space-between;
      flex-direction: initial;

      .total .desc {
        color: $text_two;
        font-size: 12px;
        font-weight: 500;
      }

      .total .t-amount {
        display: flex;
        align-items: center;
        justify-content: initial;
        flex-direction: initial;
        color: $text_one;

        .amount {
          font-size: 20px;
          font-weight: 700;

          sub {
            font-size: 14px;
            position: relative;
            bottom: 5px;
            font-weight: 600;
          }
        }

        .symbol {
          position: relative;
          top: 2px;

          font-size: 14px;

          margin-left: 6px;
          color: $text_two;
        }
      }

      img {
        height: 25px;
      }
    }
  }
}

.checkout .blu {
  display: block;
  height: 25px;
  width: 65px;
  background-color: $blue_bg;
  position: absolute;
  top: -7px;
  left: 50%;
  transform: translate(-50%, 0);
}

@media (min-width: 280px) and (max-width: 1024px) {
  .checkout {
    .credit-card {
      width: 150px;
      padding: 16px;
      height: 170px;

      .credit-card__head {
        margin-bottom: 25px;

        img {
          height: 20px;
        }
        .chip {
          height: 30px;
        }
      }
      .credit-card__body {
        .holder {
          margin-bottom: 4px;
          font-size: 10px;
        }
        .card-digits {
          margin-bottom: 4px;

          .hidden-digits {
            margin-right: 5px;
            .circle {
            }
          }
          .visible-digits {
            font-size: 10px;
          }
        }
      }
      .credit-card__footer {
        top: 25px;
      }
    }

    .checkout-details {
      top: 100px;
      left: 50%;
      transform: translate(-50%, 0);
      .purchase-data {
        top: 70px;

        .data {
          font-size: 8px;
        }
      }
    }
  }
}

